--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: Generate Snake Animation
 
 on:
-  # Runs automatically every 6 hours
   schedule:
-    - cron: "0 */6 * * *"
-  
-  # Allows manual triggering from Actions tab
+    - cron: "0 */6 * * *"    # Every 6 hours
   workflow_dispatch:
-  
-  # Runs on push to main/master branch
   push:
     branches: [ main, master ]
 
@@ -18,13 +13,11 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    
+
     steps:
-      # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4
-        
-      # Generate snake game from GitHub contribution graph
+
       - name: Generate Snake
         uses: Platane/snk/svg-only@v3
         with:
@@ -36,44 +29,18 @@ jobs:
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      # Show the status of the generated files
-      - name: Show build status
-        run: git status
 
-      # Push the content to the output branch
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v4.0.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      # Optional: Create a release with the snake files
-      - name: Create Release
-        if: github.event_name == 'workflow_dispatch'
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: snake-${{ github.run_number }}
-          name: Snake Animation Release ${{ github.run_number }}
-          body: |
-            🐍 Automated snake animation generation
-            
-            **Generated files:**
-            - `snake.svg` - Default snake animation
-            - `snake-dark.svg` - Dark theme version
-            - `snake-light.svg` - Light theme version  
-            - `ocean.gif` - Animated GIF version
-            
-            **Stats:**
-            - Generated: ${{ github.event.head_commit.timestamp }}
-            - Workflow: ${{ github.workflow }}
-            - Run ID: ${{ github.run_id }}
-          files: |
-            dist/snake.svg
-            dist/snake-dark.svg
-            dist/snake-light.svg
-            dist/ocean.gif
+      - name: Copy snake to assets
+        run: |
+          mkdir -p assets
+          cp dist/snake.svg assets/snake.svg
+
+      - name: Commit & Push snake
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add assets/snake.svg
+          git commit -m "Update snake animation [skip ci]" || echo "No changes to commit"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
