--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 12 hours
+  schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
   push:
@@ -13,7 +13,6 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
       - name: Checkout repository
@@ -32,20 +31,3 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload snake.svg to GitHub Releases
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: latest
-          release_name: Latest Snake Animation
-          files: dist/snake.svg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Notify via Discord
-        uses: Ilshidur/action-discord@v2
-        with:
-          webhook_url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          message: "New snake animation generated! Check it out: https://raw.githubusercontent.com/prnvvv/prnvvv/output/snake.svg"
-        env:
-          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
