--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs at 00:00 UTC every day
+    - cron: "0 0 * * *"  # Runs daily at 00:00 UTC
   workflow_dispatch:
   push:
     branches:
@@ -15,22 +15,24 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Generate Snake
+      - name: Generate Snake SVGs
         uses: Platane/snk/svg-only@v3
-        id: snake-gif
         with:
           github_user_name: prnvvv
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-          svg_out_path: dist/github-contribution-grid-snake.svg
+            snake.svg
+            snake-dark.svg?palette=github-dark
+            snake-light.svg?palette=github-light
 
-      - name: Push to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
+      - name: Commit & Push snake
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add snake.svg
+          git commit -m "Update snake animation [skip ci]" || echo "No changes to commit"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
